--- a/运行文件.md
+++ b/运行文件.md
@@ -1,3 +1,3 @@
-0.进入目录hd0
-1.先链接数据库，拿DATA.sql链接，运行后端hd0，node app.js
-2.运行前端qd0，可npm i，再运行npm run serve
+0.进入目录hd
+1.先链接数据库，拿DATA.sql链接，运行后端hd，node app.js
+2.运行前端qd，先npm i，再运行npm run serve
